# nt2-hulp

./: .cursorrules  .gitignore  LICENSE  README.md
accounts/: admin.py  api_urls.py  api_views.py  serializers.py
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/accounts/: admin.py  admin_urls.py  admin_views.py  api_views.py  apps.py  beheer_urls.py  beheer_views.py  models.py  permissions.py  signals.py  tests.py
backend/accounts/management/commands/: create_first_admin.py  create_first_beheerder.py
backend/accounts/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions_and_more.py
backend/config/: settings.py  urls.py  views.py
backend/exercises/: apps.py  models.py  selectors.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/exercises/migrations/: 0001_initial.py
backend/verbs/: admin.py  apps.py  invulzinnen_urls.py  models.py  serializers.py  tests.py  themas_urls.py  urls.py  views.py
backend/verbs/management/commands/: seed_initial_data.py
backend/verbs/migrations/: 0001_initial.py  0002_add_fill_in_sentence.py  0003_add_answer_form_key.py  0004_alter_fillinsentence_answer_form_key.py  0005_add_theme_and_invulzin_thema.py
config/: settings.py
docs/: docker.md  epic-3-invulzinnen-beheren.md  rollen-autorisatie.md  testing.md  voortgang-tracking.md
frontend/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
(+137 files in other folders)
